# SoftEtherVPN-iOS

./: .gitignore  CMakeLists.txt
cmake/: ReadCurrentBuild.cmake  SetBuildType.cmake  TimeStamps.cmake
src/: CMakeLists.txt
src/Cedar/: CMakeLists.txt  Cedar-Bridging-Header.h  Cedar.h  CedarCocoa.h  Client.swift  Connection.c  Connection.swift  IPC.swift  Protocol.swift  Session.swift  WebUI.swift
src/Cocoa/: .gitignore  CMake.xcconfig  CMake.xcconfig.template  CMakeLists.txt  Defaults.xcconfig  Developer.xcconfig  configure  strtable.py
src/Cocoa/SENE/: Info.plist  PacketTunnelProvider.swift  SENE-macOS.entitlements
src/Cocoa/SoftEtherVPN.xcodeproj/: project.pbxproj
src/Cocoa/SoftEtherVPN.xcodeproj/xcshareddata/xcschemes/: SENE.xcscheme  libsoftether.xcscheme
src/Cocoa/SoftEtherVPN.xcworkspace/: contents.xcworkspacedata
src/Mayaqua/: CMakeLists.txt  Encrpt.swift  MayaType.h  Mayaqua-Bridging-Header.h  Mayaqua.h  MayaquaCocoa.h  Memory.swift  Network.swift  Object.swift  Str.swift  Table.swift  Unix.c  Util.swift  test.swift
